@@ -1,3 +1,7 @@
+Sat May  8 11:25:08 CEST 2004  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubg.c, show.c: enlarge buffers
+
 Fri May  7 21:13:26 CEST 2004  Joern Thyssen  <jth@gnubg.org>
 
 	* external_l.l: fix buffer overflow.
